# demucs-autosplit

./: .gitignore  .pre-commit-config.yaml  README.md  install_extras.sh  project_summary.md  pyproject.toml  setup_tensorflow.sh
scripts/: batch_split.py  chords_detect.py  split_track.py
src/: service.py  ui.py
src/demucs_audiosplit/: __init__.py  audiosplit.py  chords_library.py  chords_predict.py  filters.py
