[project]
name = "demucs-autosplit"
version = "0.1.0"
description = "Batch stem separation using Demucs"
authors = [{ name = "Vincent LE MEUR", email = "vincent.le-meur@metroscope.tech" }]
requires-python = ">=3.11"

dependencies = [
    "torch>=2.2.2",
    "demucs>=4.0.0",
    "ruff>=0.4.0",
    "black>=24.0.0",
    "scipy>=1.11.0",
    "numpy>=1.24.0",
    "soundfile>=0.12.1",
    "madmom @ git+https://github.com/CPJKU/madmom.git"
]


[tool.ruff]
line-length = 100
exclude = ["outputs", ".venv"]
target-version = "py311"
select = ["E", "F", "I"]
fix = true
